fix: stack picker column missing background color

--- a/components/stack-picker/style/component.scss
+++ b/components/stack-picker/style/component.scss
@@ -159,6 +159,7 @@
       padding-right: var(--stack-picker-padding);
       overflow-y: scroll;
       box-shadow: var(--stack-picker-shadow);
+      background: var(--stack-picker-background);
     }
 
     &-item {
